--- a/CSS/asg.html
+++ b/CSS/asg.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style1.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Assignment</title>
+    <link rel="stylesheet" href="style2.css"/>
 </head>
+
 <body>
-    <div class="main">
-        <div class="header">header</div>
-        
-        <div class="navigation">navigation</div>
-        <div class="sidebar">sidebar</div>
-        <div class="content">main</div>
-        <div class="ads">ads</div>
-        <div class="footer">footer</div>
+
+    <h1 id="mainTopic" class="head">CSS Practice</h1>
+    <h3 class="head">Let's learn about selectors.</h3>
+
+    <!-- Paragraph 1 -->
+    <p>There are multiple selectors in CSS.</p>
+
+    <!-- Paragraph 2 -->
+    <p>Some of them include class selector, id selector etc.</p>
+
+    <!-- Paragraph 3 -->
+    <p>And we can also combine these too.</p>
+
+    <div>
+        <h5 class="head">Did you like the practice set?</h5>
+
+        <input type="checkbox" id="yes" />
+        <label for="yes">Yes</label>
+
+        <br />
+
+        <button>Learn next!</button>
     </div>
-    
+
 </body>
+
 </html>
